corrected the image resolution of all 3images in the homepage midsection, also correctly aligned in center the words biopharma and life sciences in the center of the image

--- a/css/styles.css
+++ b/css/styles.css
@@ -531,7 +531,7 @@ body
 	position: relative;
 	width: 450px;
 	height: 400px;
-	background-image: url('../imgs/homepage-sectionimage1v1.jpg');
+	background-image: url('../imgs/homepage-sectionimage1v2.jpg');
 	z-index:5;
 }
 #home-img2
@@ -540,7 +540,8 @@ body
 	position: relative;
 	width: 455px;
 	height: 400px;
-	background-image: url('../imgs/homepage-sectionimage2v1.jpg');
+	background-image: url('../imgs/homepage-sectionimage2v2.jpg');
+	background-size: 100% 100%;
 	left: -15px;
 	z-index:5;
 }
@@ -551,7 +552,7 @@ body
 	width: 455px;
 	left:-19px;
 	height: 400px;
-	background-image: url('../imgs/homepage-sectionimage3v1.jpg');
+	background-image: url('../imgs/homepage-sectionimage3v2.jpg');
 	z-index:5;
 	
 }
@@ -591,6 +592,10 @@ body
 	top:4px;	
 }
 
+#biopharma
+{
+	left:22%;
+}
 
 #homepage-section2
 {
